<resources>
    <string name="app_name" translatable="false">MyInnerCircle</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="pin">1234</string>
    <string name="pino">Pino</string>
    <string name="iniciar_sessao">Iniciar Sessao</string>
    <string name="alterar_pino">Alterar Pino</string>
    <string name="sobre">Sobre..</string>
    <string name="agenda">Agenda</string>
    <string name="trabalho_desenvolvido_por">Trabalho Desenvolvido Por:</string>
    <string name="rui_manuel_de_oliveira_pereira">Rui Manuel de Oliveira Pereira</string>
    <string name="_10_valores">10 Valores</string>
    <string name="voltar">Voltar</string>
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="voltar_main">Voltar</string>
    <string name="morada">Morada</string>
    <string name="telemovel">Telemovel</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ver">Ver</string>
    <string name="email">Email</string>
    <string name="inserir">Insere</string>
    <string name="editar">Edita</string>
    <string name="apaga">Apaga</string>
    <string name="mais">Mais..</string>
    <string name="detalhe_do_contacto">Detalhe do Contacto</string>
    <string name="nome_det">Nome</string>
    <string name="apelido_det">Apelido</string>
    <string name="morada_det">Morada</string>
    <string name="telemovel_det">Telemovel</string>
    <string name="latitude_det">Latitude</string>
    <string name="longitude_det">Longitude</string>
    <string name="email_det">Email</string>
    <string name="ligar">Liga</string>
    <string name="voltar_det">Voltar</string>
    <string name="n_vel_de_bateria">Nível de Bateria</string>
    <string name="nb">NB%</string>
    <string name="esconder">Esconder</string>
    <string name="mostrar">Mostrar</string>
    <string name="ordem_ascendente">Ordem Ascendente</string>
    <string name="ordem_descendete">Ordem Descendente</string>
    <string name="segundos">10</string>
    <string name="HorasMinutos">21:10</string>
    <string name="op_es_avan_adas">Opções Avançadas</string>
    <string name="nascimento">Data de Nascimento:yyyy-MM-dd</string>
    <string name="idade">Idade</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="anos">Anos</string>
    <string name="mudar_pino">Mudar Pino</string>
    <string name="confirmar_pino">Confirmar Pino</string>
    <string name="bt_mudar_pino">Guardar Pino</string>
    <string name="fechar">Fechar Aplicação</string>
</resources>