<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ruipereira.MySweetCall.Detalhe">
    <TextView
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/detalhe_do_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/et_det_nome"
            android:hint="@string/nome_det"
            android:textColor="@color/verde_alface"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/et_det_apelido"
            android:hint="@string/apelido_det"
            android:textColor="@color/verde_alface"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/et_det_morada"
            android:textColor="@color/verde_alface"
            android:hint="@string/morada_det"
            android:layout_weight="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/et_det_telemovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:height="20sp"
            android:hint="@string/telemovel_det"
            android:inputType="phone"
            android:textColor="@color/verde_alface"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/et_det_latitude"
            android:hint="@string/latitude_det"
            android:textColor="@color/verde_alface"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/et_det_longitude"
            android:hint="@string/longitude_det"
            android:textColor="@color/verde_alface"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/et_det_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="20sp"
            android:hint="@string/email_det"
            android:inputType="textEmailAddress"
            android:textColor="@color/verde_alface"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/et_det_nasc"
            android:hint="@string/data_de_nascimento"
            android:textColor="@color/verde_alface"
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_det_idade"
            android:hint="@string/idade"
            android:textColor="@color/verde_alface"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_anos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/verde_alface"
            android:hint="@string/anos"
            android:gravity="center"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_ligar"
            android:text="@string/ligar"
            android:textColor="@color/white"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/bt_voltar"
            android:text="@string/voltar_det"
            android:textColor="@color/white"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.ruipereira.MySweetCall.Mapa"
        tools:layout="@layout/activity_mapa" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_det_foto"
            android:layout_width="150sp"
            android:layout_height="150sp"/>
    </LinearLayout>
</LinearLayout>